added upgraded java features